--- a/cooking.html
+++ b/cooking.html
@@ -61,12 +61,12 @@
                 </p>      
         </div>
         <div id = "ricepics">
-            <div class="rice1">
+            <!-- <div class="rice1">
                 <img src="imgs/rice3.png" alt="Picture of a burrito bowl">
             </div>
             <div>
                 <img src="imgs/rice2.png" alt="Picture of fried rice">
-            </div>
+            </div> -->
         </div>
 
         <div class = "container" id="breadcontainer">
