--- a/cooking.html
+++ b/cooking.html
@@ -60,26 +60,37 @@
                      half the calories. Moral of the story: don't underestimate the power of rice. 
                 </p>      
         </div>
-        <div id = "ricepics">
-            <!-- <div class="rice1">
+        <!-- <div id = "ricepics">
+            <div class="rice1">
                 <img src="imgs/rice3.png" alt="Picture of a burrito bowl">
             </div>
             <div>
                 <img src="imgs/rice2.png" alt="Picture of fried rice">
-            </div> -->
-        </div>
+            </div>
+        </div> -->
 
         <div class = "container" id="breadcontainer">
             <p id= "bread">Bread!</p>
-            <img src="imgs/bagel.jpeg" id="bagel" alt="Picture of a pretzel bagel">
-            <img src="imgs/challah.jpeg" id="challah" alt="Picture of a challah">
-            <img src="imgs/wholegrain.jpeg" id="wholegrain" alt="Picture of whole grain bread">
-            <img src="imgs/pretzel.jpeg" id="pretzel" alt="picture of pretzels">
-            <p class="bread_paragraph">Obviously, I also didn't discover bread. But, just like rice, I think it deserves more hype than it gets. Especially my bread.
-                I make great bread, not to brag. After years of baking, I got bored of making the same things over and over again. I love sweets, don't get me wrong,
-                 but I don't neccessarily need 3 dozen cookies on my counter every day. So, this summer, I switched to foods I would actually eat and use in my 
-                 daily life, like bread! Below are some of the loaves I've made, as well as the pretzels (and pretzel bagels) that my bread baking spiraled into!
-           </p>
+            <div class="breadcontainer">
+                <div class="bagel">
+                    <img src="imgs/bagel.jpeg" alt="Picture of a pretzel bagel">
+                </div>
+                <div class="challah">
+                    <img src="imgs/challah.jpeg" alt="Picture of a challah">
+                </div>
+                <div class="wholegrain">
+                    <img src="imgs/wholegrain.jpeg" alt="Picture of whole grain bread">
+                </div>
+                <div class = "pretzel">
+                    <img src="imgs/pretzel.jpeg" alt="picture of pretzels">
+                </div>
+            </div>
+            <div class="bread_paragraph">
+                <p>Obviously, I also didn't discover bread. But, just like rice, I think it deserves more hype than it gets. Especially my bread.
+            I make great bread, not to brag. After years of baking, I got bored of making the same things over and over again. I love sweets, don't get me wrong,
+             but I don't neccessarily need 3 dozen cookies on my counter every day. So, this summer, I switched to foods I would actually eat and use in my 
+             daily life, like bread! Below are some of the loaves I've made, as well as the pretzels (and pretzel bagels) that my bread baking spiraled into!</p>
+            </div>
         </div>
 
         <div class = "container">
